<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color">

    <TextView
        android:id="@+id/textView"
        android:layout_width="149dp"
        android:layout_height="39dp"
        android:text="@string/esta_seguro_de_enviar_la_alarma"
        android:textAlignment="center"
        android:textFontWeight="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.326" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/circle_button"
        android:backgroundTint="@null"
        android:contentDescription="@string/_Alerta"
        android:src="@drawable/check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.224" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/circle_button"
        android:backgroundTint="@null"
        android:contentDescription="@string/_historial"
        android:src="@drawable/close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.224" />


</androidx.constraintlayout.widget.ConstraintLayout>